Update deprecated usages of Class.newInstance()
Fix SavedStateFactoryTest to expect correct exception.

Fixes: 253665811
Test: SavedStateFactoryTest
Change-Id: I2eaac118c238c10232db76ea302ddda743a59f0d